# documents_classifier_api

./: .gitignore  EDA.ipynb  README.md  app.py  classify_headline.py  classify_headlines.py  config.json  data_analysis.py  dockerfile  environment.yml  requirements.txt  run_model_training.sh  run_pipeline.sh  setup.txt  steps.txt  test.py  titles_to_test.txt
images/: MLE Exercise.docx  ing_mle_task_pres.pptx
images/ing-mle-task-api/: .gitignore  Dockerfile  README.md  api_test_predict_multiple.sh  api_test_predict_one.sh  pyproject.toml  requirements.txt
images/ing-mle-task-api/ing_mle_task_api/: main.py
images/ing-mle-task-api/ing_mle_task_api/models/: model.py
images/ing-mle-task-api/ing_mle_task_api/routers/: model_info.py  predict.py
images/ing-mle-task-api/ing_mle_task_api/schemas/: model_info.py  predict.py
images/ing-mle-task-api/ing_mle_task_api/tests/: test_predict.py
images/ing-mle-task-api/ing_mle_task_api/utils/: translate.py
images/ing-mle-task-api/model/: model_pipeline.pkl
images/ing-mle-task-model/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
images/ing-mle-task-model/ing_mle_task_model/: missing_values_handle.json  preprocessing.py  training.py
images/ing-mle-task-model/ing_mle_task_model/config/: logconfig.py
images/ing-mle-task-model/tests/: test_preprocessing.py
models/: model.pkl  tfidf_vectorizer.pkl
notebooks/: EDA.ipynb  stories.txt
run/: run_api.sh
src/: data_preprocessing.py  modeling.py
templates/: index.html
tests/: input_test.py  preprocessed_input_test.py  test_api.py
(+1 files in other folders)
