[tool.poetry]
name = "ing-mle-task-api"
version = "0.1.0"
description = ""
authors = ["matmakonen <maciejewski.mat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
pandas = "2.0.0"
scikit-learn = "0.24.2"
fastapi = "0.115.0"
uvicorn = "0.30.6"

[tool.poetry.group.dev.dependencies]
pytest = "6.2.4"
httpx = "0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
