[tool.poetry]
name = "ing-mle-task-model"
version = "0.1.0"
description = ""
authors = ["matmakonen <maciejewski.mat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
pandas = "2.0.0"
scikit-learn = "0.24.2"

[tool.poetry.group.dev.dependencies]
pytest = "6.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
